--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "lucide-react": "^0.488.0",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
+    "react-vertical-timeline-component": "^3.5.3",
     "sass": "^1.85.1"
   },
   "devDependencies": {
